--- a/ex00/Makefile
+++ b/ex00/Makefile
@@ -13,7 +13,7 @@
 include makerc/definitions.mk
 include makerc/options.mk
 
-# **************************************************************************** #
+# ************************************Rules*********************************** #
 
 all: $(NAME)
 .PHONY: all
